[Fix]Update parameter z-index.

--- a/mm02ce/dunghd/content/src/scripts/stylesheets/main.scss
+++ b/mm02ce/dunghd/content/src/scripts/stylesheets/main.scss
@@ -17,7 +17,7 @@
   }
   font-family: 'Roboto';
   position: relative;
-  z-index: 9999;
+  z-index: 999999999;
   @import 'rc-steps/index';
   @import 'rc-steps/iconfont';
   @import 'animate.min';
